2006-07-06 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Removed redundant -L and -I
	from GEOS_LIBS and GEOS_CFLAGS.

2006-07-06 Mateusz Loskot <mateusz@loskot.net>

	* macros/geos.m4: Fixed GEOS_INIT to support full paths to
	geos-config passed to --with-geos. Fixed version decoding. 

2006-07-05 Sandro Santilli <strk@refractions.net>

	* tests/unit/Makefile.am: distribute utility.h.
	* configure.in, tests/Makefile.am, tests/tut/Makefile.am:
	distribute the TUT framework.
	* tests/xmltester/Makefile.am: distribute XML tests and tester.
	* source/operation/valid/Makefile.am: fixed missing
	SweeplineNestedRingTester.cpp file.
	* source/headers/geos/operation/linemerge/Makefile.am:
	fixed missing backslash, dropping headers from distribution.
	* source/headers/geos/operation/overlay/OverlayOp.h,
	source/operation/overlay/OverlayOp.cpp: added checks
	for obviously wrong results.

2006-06-27 Sandro Santilli <strk@refractions.net>

	* source/algorithm/HCoordinate.cpp: added
	support for MingW -ansi builds.
	* capi/geos_c.cpp: fixed forward declaration
	of GEOSCoordSeq_getOrdinate.
	* capi/geos_c.h.in: renamed GEOSGeomTypeId
	enum to GEOSGeomTypes, to make VC++ 2005 happy.

2006-06-19 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/CoordinateFilter.h,
	source/headers/geos/noding/ScaledNoder.h,
	source/headers/geos/util/CoordinateArrayFilter.h,
	source/headers/geos/util/UniqueCoordinateArrayFilter.h,
	source/noding/ScaledNoder.cpp: don't *require*
	CoordinateFilters to define both read-only and read-write
	methods.
	* source/geom/Polygon.cpp: optimized loops.
	* geom::GeometryFactory (cpp,h,inl): port info and doxygen dox.
	* geom::util::GeometryTransformer (cpp,h): updated port info.
	* tests/xmltester/XMLTester.cpp: tolerate invalid inputs.

2006-06-14 Sandro Santilli <strk@refractions.net>

	* source/geom/Coordinate.cpp, source/headers/geos/geom/Coordinate.h,
	source/headers/geos/geom/Coordinate.inl: let the compiler